--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 sdk-compile = "34"
 sdk-target = "34"
+sdk-min = "26"
 activity-compose = "1.7.2"
 agp = "8.1.1"
 androidx-material = "1.5.1"
