--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,4 +38,10 @@ org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.re
 org-jetbrains-kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "org-jetbrains-kotlin-multiplatform" }
 
 [bundles]
-
+compose = [
+    "androidx-compose-foundation",
+    "androidx-compose-material",
+    "androidx-compose-ui",
+    "androidx-compose-ui-tooling",
+    "androidx-compose-ui-tooling-preview"
+]
