--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,21 @@
 [versions]
+# project
 sdk-compile = "34"
 sdk-target = "34"
 sdk-min = "26"
 jvm = "1.8"
-compose = "2023.09.00"
-compose-compiler = "1.5.0"
-activity-compose = "1.7.2"
 agp = "8.1.1"
 org-jetbrains-kotlin-android = "1.9.0"
 org-jetbrains-kotlin-multiplatform = "1.8.21"
+
+# libraries
+## main
+compose = "2023.09.00"
+compose-compiler = "1.5.0"
+activity-compose = "1.7.2"
+lifecycle = "2.6.2"
+
+## test
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 
@@ -20,6 +27,10 @@ androidx-compose-material = { group = "androidx.compose.material", name = "mater
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel-savedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "lifecycle" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 
@@ -35,5 +46,11 @@ compose = [
     "androidx-compose-material",
     "androidx-compose-ui",
     "androidx-compose-ui-tooling",
-    "androidx-compose-ui-tooling-preview"
+    "androidx-compose-ui-tooling-preview",
+]
+lifecycle = [
+    "androidx-lifecycle-viewmodel-ktx",
+    "androidx-lifecycle-viewmodel-compose",
+    "androidx-lifecycle-runtime-compose",
+    "androidx-lifecycle-viewmodel-savedstate",
 ]
