--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ org-jetbrains-kotlin-multiplatform = "1.8.21"
 
 # libraries
 ## main
+coroutines = "1.7.3"
 compose = "2023.09.00"
 compose-compiler = "1.5.0"
 activity-compose = "1.7.2"
@@ -20,6 +21,7 @@ junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 
 [libraries]
+org-jetbrains-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
