--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,8 +7,8 @@ jvm = "1.8"
 agp = "8.1.2"
 kotlin = "1.9.20"
 ksp = "1.9.20-1.0.14"
-co-touchlab-skie = "0.5.5"
-org-kodein-mock-mockmp = "1.15.0"
+skie = "0.5.5"
+mockmp = "1.15.0"
 
 # libraries
 ## main
@@ -63,8 +63,8 @@ com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" 
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 org-jetbrains-kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 org-jetbrains-kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-co-touchlab-skie = { id = "co.touchlab.skie", version.ref = "co-touchlab-skie" }
-org-kodein-mock-mockmp = { id = "org.kodein.mock.mockmp", version.ref = "org-kodein-mock-mockmp" }
+co-touchlab-skie = { id = "co.touchlab.skie", version.ref = "skie" }
+org-kodein-mock-mockmp = { id = "org.kodein.mock.mockmp", version.ref = "mockmp" }
 
 [bundles]
 compose = [
