--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ coil = "2.4.0"
 ## test
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
+mockk = "1.13.7"
+turbine = "1.0.0"
 
 [libraries]
 org-jetbrains-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
@@ -55,6 +57,8 @@ io-coil-kt-coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 io-coil-kt-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+io-mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+app-cash-turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
