--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ activity-compose = "1.8.2"
 lifecycle = "2.7.0"
 navigation = "2.7.6"
 koin = "3.5.0"
+koin-annotations = "1.3.1"
 ktor = "2.3.4"
 coil = "2.4.0"
 
@@ -47,6 +48,8 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 io-insert-koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
 io-insert-koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 io-insert-koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
+io-insert-koin-annotations = { group = "io.insert-koin", name = "koin-annotations", version.ref = "koin-annotations" }
+io-insert-koin-ksp-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-annotations" }
 io-ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 io-ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
 io-ktor-client-darwin = { group = "io.ktor", name = "ktor-client-darwin", version.ref = "ktor" }
@@ -83,6 +86,10 @@ lifecycle = [
     "androidx-lifecycle-viewmodel-compose",
     "androidx-lifecycle-runtime-compose",
     "androidx-lifecycle-viewmodel-savedstate",
+]
+koin = [
+    "io-insert-koin-core",
+    "io-insert-koin-annotations",
 ]
 ktor-multiplatform = [
     "io-ktor-client-core",
