--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,16 +5,15 @@ sdk-target = "34"
 sdk-min = "26"
 jvm = "1.8"
 agp = "8.2.2"
-kotlin = "1.9.20"
-ksp = "1.9.20-1.0.14"
-skie = "0.5.5"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.22"
+skie = "0.8.2"
 mockmp = "1.15.0"
 
 # libraries
 ## main
 coroutines = "1.7.3"
 compose = "2024.01.00"
-compose-compiler = "1.5.4"
 activity-compose = "1.8.2"
 lifecycle = "2.7.0"
 navigation = "2.7.6"
@@ -70,6 +69,7 @@ com-google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" 
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 org-jetbrains-kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 org-jetbrains-kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+org-jetbrains-kotlin-plugin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 co-touchlab-skie = { id = "co.touchlab.skie", version.ref = "skie" }
 org-kodein-mock-mockmp = { id = "org.kodein.mock.mockmp", version.ref = "mockmp" }
 
