Add script to build shared

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Build
         run: |
+          ./gradlew shared:assembleSharedReleaseXCFramework
           xcodebuild build-for-testing -project $project -scheme $scheme -destination "platform=iOS Simulator,name=$device"
 
       - name: Test
